# kytoon

./: .gitignore  CLAUDE.md  KYTOON-PROJECT.md  README.md  pyproject.toml
data/tudelft_v3/: CFD_RANS_Re1e6_alpha_sweep_beta_0_Vire2022_CorrectedByPoland2025.csv  CFD_RANS_Re5e5_alpha_sweep_beta_0_Vire2020_CorrectedByPoland2025.csv  SOURCE.md  WindTunnel_Re5e5_alpha_sweep_beta_0_Poland2025.csv  properties.yaml
docs/: kiteship-project-log.md
kytoon/: aero.py  geometry.py  report.py  spec.py  sweep.py  viz.py
kytoon/solvers/: l0.py  l1_aero.py  l1_body_aero.py  l1_tether.py
models/: mki.glb  mki.stl  mkii.glb  mkii.stl  mkiii.glb  mkiii.stl  mkiv.glb  mkiv.stl  mkv.glb  mkv.stl
reports/: l0.md  manta_report.md
reports/mk5_sweep/: mkv_sweep.md  v_sweep.md
specs/: mk1_sled.yaml  mk2_helikite.yaml  mk3_spine.yaml  mk4_torus.yaml  mk5_manta.yaml
specs/alternates/: mk5a_blimp.yaml
specs/manta/: a.yaml  b.yaml  c.yaml  d.yaml  e.yaml  f.yaml  g.yaml  h.yaml  i.yaml
tests/: test_geometry.py  test_l0.py  test_l1_aero.py  test_l1_body_aero.py  test_l1_tether.py  test_viz.py
