[project]
name = "kytoon-sim"
version = "0.1.0"
description = "L0 analytic design layer for kiteship kytoon iterations (Mk I-IV)"
requires-python = ">=3.11"
dependencies = ["pydantic>=2", "pyyaml>=6", "numpy>=1.26"]

[project.optional-dependencies]
# L1 aero runs on awegroup's VSM (git-only, not on PyPI; pulls aerosandbox
# via neuralfoil). trimesh/gmsh reserved for the geometry-kernel task.
l1 = [
    "vsm @ git+https://github.com/awegroup/Vortex-Step-Method.git",
    "moorpy",
    "trimesh",
    "gmsh",
]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["kytoon", "kytoon.solvers"]
